[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["jozaghi <ar.jozaghi@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ollama = "^0.4.7"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
